@@ -70,6 +70,7 @@ DETAILED CHANGES:
 	- FIXED: GenImageColor color was also argument 1.
 	- CHANGE: GetPixelDataSize takes Vector2 instead of width and height.
 	- ADDED: LoadBufferFormatted, SetBufferData and CopyBufferData. Compressed resource file example.
+	- ADDED: GetBufferAsString.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.7.0		Using Raylib 5.0 and Forked Raygui 4.0
